<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".ChatFragments.ProfileFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_margin="0dp"
    >
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/student"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/no_color"
                    android:layout_marginTop="25dp"
                    android:visibility="visible">

                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                >

                    <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/profile_big"
                            android:src="@drawable/ben10"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:contentDescription="@string/app_name"
                            android:layout_centerInParent="true"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="4dp" />

                    <ImageView
                            android:id="@+id/change_profile"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/round"
                            android:src="@drawable/camera"
                            android:tint="@color/white"
                            android:padding="11dp"
                            android:contentDescription="@string/app_name"
                            android:layout_marginStart="105dp"
                            android:layout_marginTop="105dp"
                    />

                </RelativeLayout>

                <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/user_full_name"
                        android:textAlignment="center"
                        android:textColor="@color/gray"
                        android:textSize="23sp"
                        android:textStyle="normal" />

                <TextView
                        android:id="@+id/s_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/id"
                        android:textAlignment="center"
                        android:textColor="@color/main"
                        android:textStyle="italic"
                        android:textSize="15sp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <ImageView
                            android:layout_width="17dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:contentDescription="@string/open"
                            android:src="@drawable/location"
                            android:tint="@color/main" />

                    <TextView
                            android:id="@+id/s_search_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textColor="@color/gray"
                            android:textSize="15sp" />
                </LinearLayout>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="25dp"
                        android:background="@color/main" />

                <TextView
                        android:id="@+id/about_me"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="@color/main"
                        android:paddingTop="3dp"
                        android:paddingBottom="3dp"
                        android:text="@string/personal_info"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textAlignment="center"
                        android:textStyle="normal" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/main" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="25dp"
                        android:paddingEnd="25dp"
                        android:layout_marginBottom="15dp"
                >
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/address"
                            android:textColor="@color/main"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/s_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/local_address"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/school"
                            android:textColor="@color/main"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/s_school"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/school_name"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textColor="@color/main"
                            android:layout_marginTop="10dp"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/s_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/g_name"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bio"
                            android:textColor="@color/main"
                            android:layout_marginTop="10dp"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/s_bio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bio_text"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>