<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="0dp"
        tools:context=".Activities.UserSignin">

    <RelativeLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/main"
    >
        <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@color/main_deep"
        />
        <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"
                    android:textColor="@color/white"
                    android:textSize="27sp"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/singin_message"
                    android:textColor="@color/white"
                    android:textSize="18sp"
            />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/topBar"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:layout_marginTop="50dp"
    >
        <EditText
                style="@style/editText"
                android:id="@+id/mail"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
        />
        <EditText
                style="@style/editText"
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
        />
        <TextView style="@style/button"
                  android:id="@+id/signin"
                  android:layout_gravity="center"
                  android:layout_marginTop="25dp"
                  android:text="@string/signin"
        />

        <TextView style="@style/button2"
                  android:id="@+id/new_ac"
                  android:layout_gravity="center"
                  android:layout_marginTop="35dp"
                  android:text="@string/new_account"
        />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>

    <ProgressBar
            style="@style/loading"
            android:id="@+id/loading" />

</RelativeLayout>